[tool.poetry]
name = "repl_python3_UrsinaTestBot"
version = "0.1.0"
description = ""
authors = ["gamesHQ <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
python-dotenv = "^0.19.0"
requests = "^2.26.0"
bs4 = "^0.0.1"
discord-py-interactions = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
